--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 * {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: "Lucida Console", Monaco, monospace;
     color: white;
 }
 
@@ -61,6 +62,8 @@ body {
     border-radius: 20px;
     margin: 10px;
     font-size: 18px;
+    color: black;
+    text-align: center;
 }
 
 .card-set {
@@ -70,7 +73,7 @@ body {
 }
 
 .card {
-    background-color: linen;
+    /* background-color: linen; */
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     height: 96%;
     width: 25%;
@@ -81,6 +84,26 @@ body {
     display: flex;
     font-size: 50px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.card-1 {
+    background-color: coral;
+}
+
+.card-2 {
+    background-color: cornflowerblue;
+}
+
+.card-3 {
+    background-color: darkseagreen;
+}
+
+.card-4 {
+    background-color: moccasin;
+}
+
+.card:hover {
+    background-color: whitesmoke;
 }
 
 
